--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.ac.scheduler</groupId>
   <artifactId>scheduler</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>scheduler</name>
   <!-- FIXME change it to the project's website -->
